--- a/src/styles/_cards.scss
+++ b/src/styles/_cards.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-   //  padding: 5px;
+   padding: 20px;
    //  width: 100%;
   
 
@@ -14,7 +14,7 @@
     border-radius: 15px;
  justify-content: space-between;
 }
-.card {
+.card  {
    padding: 6px;
 }
 
