--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,16 +3,20 @@
 .h1{
     color: #32B379;
     padding: 8px;
+    align-items: center;
+    padding: 15px;
 }
 .input{
     border: 20px;
     border-radius: 5px;
     background-color: #D9D9D9;
-    height: 20px;
+    height: 40px;
+    width: 350px;
+    align-items: center;
 }
 .para{
     border: 2px;
-    background-color: aqua;
+ 
     width: 50px;
     height: 50px;
     border-radius: 40px;
@@ -20,12 +24,17 @@
 .para{
    
     border: 2px;
-    background-color: aqua;
+
     width: 50px;
     height: 50px;
     border-radius: 40px;
 }
 .div{
  display: flex;
-justify-content: space-between;
+    justify-content: space-between;
+}
+.image{
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
 }
